[gd_scene load_steps=6 format=3 uid="uid://ct2nn7wnoaog3"]

[ext_resource type="Texture2D" uid="uid://8gmj48li6ysg" path="res://sprites/ads.png" id="1_wbmsd"]
[ext_resource type="Script" uid="uid://dteuxvkqvoe0m" path="res://scripts/ad.gd" id="2_6cjuh"]

[sub_resource type="Animation" id="Animation_wbmsd"]
resource_name = "fade_out"
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeOut:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6cjuh"]
resource_name = "reset"
length = 0.001
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeOut:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cdgc2"]
_data = {
&"fade_in": SubResource("Animation_wbmsd"),
&"reset": SubResource("Animation_6cjuh")
}

[node name="Ad" type="Sprite2D"]
texture = ExtResource("1_wbmsd")
vframes = 15
script = ExtResource("2_6cjuh")

[node name="Timer" type="Timer" parent="."]
wait_time = 15.0

[node name="FadeOut" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
texture = ExtResource("1_wbmsd")
vframes = 15

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_cdgc2")
}

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
